--- a/public/style.css
+++ b/public/style.css
@@ -167,6 +167,30 @@ video {
     transition: width 0.2s;
 }
 
+.bar.processing {
+    background-image: linear-gradient(45deg,
+            rgba(255, 255, 255, 0.15) 25%,
+            transparent 25%,
+            transparent 50%,
+            rgba(255, 255, 255, 0.15) 50%,
+            rgba(255, 255, 255, 0.15) 75%,
+            transparent 75%,
+            transparent);
+    background-size: 40px 40px;
+    background-color: #f1c40f;
+    animation: stripes 1s linear infinite;
+}
+
+@keyframes stripes {
+    from {
+        background-position: 40px 0;
+    }
+
+    to {
+        background-position: 0 0;
+    }
+}
+
 #status {
     margin-top: 15px;
     font-size: 0.9em;
