--- a/public/style.css
+++ b/public/style.css
@@ -16,8 +16,7 @@ body {
     margin: 0;
 }
 
-button,
-input {
+button, input {
     font-family: inherit;
 }
 
@@ -165,30 +164,6 @@ video {
     background: #5865F2;
     width: 0%;
     transition: width 0.2s;
-}
-
-.bar.processing {
-    background-image: linear-gradient(45deg,
-            rgba(255, 255, 255, 0.15) 25%,
-            transparent 25%,
-            transparent 50%,
-            rgba(255, 255, 255, 0.15) 50%,
-            rgba(255, 255, 255, 0.15) 75%,
-            transparent 75%,
-            transparent);
-    background-size: 40px 40px;
-    background-color: #f1c40f;
-    animation: stripes 1s linear infinite;
-}
-
-@keyframes stripes {
-    from {
-        background-position: 40px 0;
-    }
-
-    to {
-        background-position: 0 0;
-    }
 }
 
 #status {
